# metadata-classification

./: .dockerignore  Dockerfile  LICENSE  README.md  analysis.qmd  build-container.sh  config-api-docker.yaml  config-api.yaml  environment-docker-prediction-catboost.yaml  environment-docker.yaml  model.ipynb  model_catboost.ipynb  predict-docker.sh  predict.sh  pyproject.toml  requirements-prediction-catboost.txt  requirements.txt  train_all_models.smk
analysis/: plot_results.qmd
src/msc/: __main__.py  constants.py  data_loading.py  dicom_feature_extraction.py  feature_extraction.py  heuristics.py  orthanc_utilities.py  sanitization.py  train.py  train_utils.py
src/msc/api/: __main__.py  app.py  app_funcs.py  utils.py
src/msc/entrypoints/: collect_metrics.py  get_feature_parquet.py  get_metadata_json.py  merge_target.py  predict.py  predict_alt.py  predict_dicom_web.py  train.py
src/msc/utils/: collect_metrics.py  get_feature_importance.py  get_feature_parquet.py  get_metadata_json.py  predict.py  split_csv.py  split_data.py
utils/: collect_metrics.py  split_csv.py  train_model.py
