[project]
name = "metadata-sequence-classification"
version = "0.1.0"
description = "Toolbox for automatic DICOM metadata extraction and classification/regression."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.1",
    "dill>=0.3.5.1",
    "fastapi[standard]>=0.115.4",
    "fasttreeshap>=0.1.6",
    "numpy>=1.23.4",
    "pandas>=2.2.3",
    "polars>=1.12.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.2",
    "pydicom>=2.3.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.1.2",
    "scipy>=1.9.2",
    "tqdm>=4.66.6",
    "xgboost>=1.6.2",
]
